# Friendev

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  MULTILINE_INPUT_FIX.md  QUICKREF.md  README.md
.github/: GithubCI-By-Friendev.txt
.github/workflows/: ci.yml
agents/: Cargo.toml
agents/src/: gitattributes.rs  lib.rs  loader.rs  mod.rs  project_analyzer.rs  prompt_generator.rs
api/: Cargo.toml
api/src/: lib.rs
api/src/api/: accumulator.rs  client.rs  executor.rs  stream.rs  types.rs
app/: Cargo.toml
app/src/: lib.rs
app/src/app/: command_handler.rs  message_builder.rs  mod.rs  reedline_config.rs  reedline_prompt.rs  repl.rs  review.rs  startup.rs  terminal_ui.rs
chat/: Cargo.toml
chat/src/: lib.rs
chat/src/chat/: output_formatter.rs  send_receive.rs  stream_handler.rs
commands/: Cargo.toml
commands/src/commands/: agents.rs  help.rs  history.rs  language.rs  mod.rs  model.rs  runcommand.rs
config/: Cargo.toml
config/src/config/: defaults.rs  setup.rs  updates.rs
example/3/: 1.html
example/6/: Add-info-in-Approval-Required-but-let-Friendev-do-the-work-himself.htm
example/6/Add-info-in-Approval-Required-but-let-Friendev-do-the-work-himself.files/: filelist.xml
history/: Cargo.toml
history/src/: lib.rs
history/src/history/: management.rs  persistence.rs  session.rs
i18n/: Cargo.toml
i18n/src/: lib.rs
i18n/src/i18n/: en_us.rs  mod.rs  zh_cn.rs
prompts/: Cargo.toml
prompts/src/: lib.rs
search_tool/: Cargo.toml
search_tool/src/: lib.rs
search_tool/src/search_tool/: auto.rs  bing.rs  duckduckgo.rs  mod.rs
src/: agents.rs  api.rs  chat.rs  commands.rs  config.rs  history.rs  main.rs  prompts.rs  search_tool.rs  security.rs  tools.rs  ui.rs
src/api/: accumulator.rs  client.rs  executor.rs  mod.rs  parser.rs  stream.rs
src/app/: command_handler.rs  message_builder.rs  mod.rs  repl.rs  startup.rs
src/chat/: mod.rs  output_formatter.rs  send_receive.rs  stream_handler.rs
src/commands/: agents.rs  help.rs  history.rs  language.rs  mod.rs  model.rs  runcommand.rs
src/config/: mod.rs  persistence.rs  setup.rs  types.rs  updates.rs
src/history/: management.rs  mod.rs  persistence.rs  session.rs
src/i18n/: en_us.rs  loader.rs  mod.rs  zh_cn.rs
src/search_tool/: auto.rs  bing.rs  duckduckgo.rs  html_parser.rs  mod.rs
src/tools/: args.rs  command_manager.rs  definitions.rs  executor.rs  mod.rs  types.rs  utils.rs
src/tools/executor/: command_operations.rs  mod.rs
src/tools/executor/file_operations/: file_common.rs  file_diff_edit.rs  file_list.rs  file_read.rs  file_replace.rs  file_write.rs  mod.rs
src/tools/executor/search_operations/: mod.rs  search_auto.rs  search_bing.rs  search_common.rs  search_duckduckgo.rs
src/ui/: approval_prompt.rs  mod.rs  spinner.rs  tool_call_display.rs
tools/: Cargo.toml
tools/src/: lib.rs
tools/src/tools/: args.rs  definitions.rs  mod.rs
tools/src/tools/executor/: command_operations.rs  mod.rs  utils.rs
tools/src/tools/executor/file_operations/: file_common.rs  file_diff_edit.rs  file_list.rs  file_read.rs  file_replace.rs  file_write.rs  mod.rs
tools/src/tools/executor/network_operations/: fetch_content.rs  mod.rs
tools/src/tools/executor/search_operations/: search_auto.rs  search_bing.rs  search_common.rs  search_duckduckgo.rs
ui/: Cargo.toml
ui/src/: lib.rs
ui/src/ui/: approval_prompt.rs  enhanced_output.rs  mod.rs  spinner.rs  tool_call_display.rs
