[package]
name = "friendev"
version = "0.2.3"
edition = "2021"

[workspace]
members = [
    ".",
    "agents_md_file",
    "commands",
    "api",
    "app",
    "chat",
    "config",
    "history",
    "i18n",
    "search_tool",
    "tools",
    "ui",
    "security",
    "prompts",
]

[dependencies]
# 核心依赖
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
agents = { path = "agents_md_file" }
commands = { path = "commands" }
app = { path = "app" }
api = { path = "api" }
chat = { path = "chat" }
config = { path = "config" }
history = { path = "history" }
i18n = { path = "i18n" }
prompts = { path = "prompts" }
security = { path = "security" }
tools = { path = "tools" }
ui = { path = "ui" }
