[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossterm = "0.27"

api = { path = "../api" }
agents = { path = "../agents" }
chat = { path = "../chat" }
commands = { path = "../commands" }
config = { path = "../config" }
history = { path = "../history" }
i18n = { path = "../i18n" }
prompts = { path = "../prompts" }
security = { path = "../security" }
tools = { path = "../tools" }
ui = { path = "../ui" }
reedline = "0.28"
